fixed sizing issues on mobile and desktop

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@
 }
 
 #contact-form {
-  width: 50%;
   margin: 15px auto;
   border: 2px solid white;
   border-radius: 4px;
@@ -32,7 +31,6 @@
 }
 
 .paraContainer {
-  width: 50%;
   margin: 15px auto;
   border: 2px solid white;
   border-radius: 4px;
